Notifications should now work properly

--- a/Views/Roles/Edit.cshtml
+++ b/Views/Roles/Edit.cshtml
@@ -19,6 +19,11 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="DiscordText" class="control-label"></label>
+                <textarea asp-for="DiscordText" class="form-control"></textarea>
+                <span asp-validation-for="DiscordText" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Template" class="control-label"></label>
                 <textarea asp-for="Template" class="form-control"></textarea>
                 <span asp-validation-for="Template" class="text-danger"></span>
